--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin-Cacluator</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-    
+<body>
+    <div class="container">
+        <div class="display">
+            <button class="numButtons">7</button>
+            <button class="numButtons">8</button>
+            <button class="numButtons">9</button>
+            <button class="numButtons">x</button>
+            <button class="numButtons">4</button>
+            <button class="numButtons">5</button>
+            <button class="numButtons">6</button>
+            <button class="numButtons">-</button>
+            <button class="numButtons">1</button>
+            <button class="numButtons">2</button>
+            <button class="numButtons">3</button>
+            <button class="numButtons">+</button>
+            <button class="numButtons">0</button>
+            <button class="numButtons">/</button>
+            <button class="numButtons">=</button>
+            <button class="numButtons">AC</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
+
 </html>
