feat: add display

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <div class="container">
-        <div class="display">
+        <div class="calculator">
+            <h1 class="display">0</h1>
+            <button class="numButtons ac">AC</button>
+            <button class="numButtons del">DEL</button>
+            <button class="numButtons">/</button>
             <button class="numButtons">7</button>
             <button class="numButtons">8</button>
             <button class="numButtons">9</button>
@@ -24,9 +28,10 @@
             <button class="numButtons">3</button>
             <button class="numButtons">+</button>
             <button class="numButtons">0</button>
-            <button class="numButtons">/</button>
+            <button class="numButtons">.</button>
             <button class="numButtons">=</button>
-            <button class="numButtons">AC</button>
+
+
         </div>
     </div>
 
