--- a/index.html
+++ b/index.html
@@ -11,27 +11,36 @@
 <body>
     <div class="container">
         <div class="calculator">
-            <h1 class="display">0</h1>
-            <button class="numButtons ac">AC</button>
-            <button class="numButtons del">DEL</button>
-            <button class="numButtons">/</button>
-            <button class="numButtons">7</button>
-            <button class="numButtons">8</button>
-            <button class="numButtons">9</button>
-            <button class="numButtons">x</button>
-            <button class="numButtons">4</button>
-            <button class="numButtons">5</button>
-            <button class="numButtons">6</button>
-            <button class="numButtons">-</button>
-            <button class="numButtons">1</button>
-            <button class="numButtons">2</button>
-            <button class="numButtons">3</button>
-            <button class="numButtons">+</button>
-            <button class="numButtons">0</button>
-            <button class="numButtons">.</button>
-            <button class="numButtons">=</button>
-
-
+            <p class="casio">CASIO</p>
+            <p class="display">0</p>
+            <div class="row">
+                <button class="numButtons ac">AC</button>
+                <button class="numButtons del">DEL</button>
+            </div>
+            <div class="row">
+                <button class="numButtons">7</button>
+                <button class="numButtons">8</button>
+                <button class="numButtons">9</button>
+                <button class="numButtons symbol">/</button>
+            </div>
+            <div class="row">
+                <button class="numButtons">4</button>
+                <button class="numButtons">5</button>
+                <button class="numButtons">6</button>
+                <button class="numButtons symbol">x</button>
+            </div>
+            <div class="row">
+                <button class="numButtons">1</button>
+                <button class="numButtons">2</button>
+                <button class="numButtons">3</button>
+                <button class="numButtons symbol">-</button>
+            </div>
+            <div class="row">
+                <button class="numButtons">0</button>
+                <button class="numButtons symbol">.</button>
+                <button class="numButtons symbol">=</button>
+                <button class="numButtons symbol">+</button>
+            </div>
         </div>
     </div>
 
