--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
     <div class="container">
         <div class="calculator">
             <p class="casio">CASIO</p>
-            <p class="display">0</p>
+            <p class="display"></p>
             <div class="row">
                 <button class="numButtons ac">AC</button>
                 <button class="numButtons del">DEL</button>
             </div>
             <div class="row">
-                <button class="numButtons">7</button>
-                <button class="numButtons">8</button>
-                <button class="numButtons">9</button>
-                <button class="numButtons symbol">/</button>
+                <button class="numButtons" value="7">7</button>
+                <button class="numButtons" value="8" >8</button>
+                <button class="numButtons" value="9">9</button>
+                <button class="numButtons symbol" value="7">/</button>
             </div>
             <div class="row">
-                <button class="numButtons">4</button>
-                <button class="numButtons">5</button>
-                <button class="numButtons">6</button>
-                <button class="numButtons symbol">x</button>
+                <button class="numButtons" value="4">4</button>
+                <button class="numButtons" value="5">5</button>
+                <button class="numButtons" value="6">6</button>
+                <button class="numButtons symbol" value="*">x</button>
             </div>
             <div class="row">
-                <button class="numButtons">1</button>
-                <button class="numButtons">2</button>
-                <button class="numButtons">3</button>
-                <button class="numButtons symbol">-</button>
+                <button class="numButtons" value="1">1</button>
+                <button class="numButtons" value="2">2</button>
+                <button class="numButtons" value="3">3</button>
+                <button class="numButtons symbol" value="-">-</button>
             </div>
             <div class="row">
-                <button class="numButtons">0</button>
-                <button class="numButtons symbol">.</button>
-                <button class="numButtons symbol">=</button>
-                <button class="numButtons symbol">+</button>
+                <button class="numButtons" value="0">0</button>
+                <button class="numButtons symbol" value=".">.</button>
+                <button class="numButtons symbol equalTo" value="=">=</button>
+                <button class="numButtons symbol" value="+">+</button>
             </div>
         </div>
     </div>
