--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button class="numButtons" value="7">7</button>
                 <button class="numButtons" value="8" >8</button>
                 <button class="numButtons" value="9">9</button>
-                <button class="numButtons symbol" value="7">/</button>
+                <button class="numButtons symbol" value="/">/</button>
             </div>
             <div class="row">
                 <button class="numButtons" value="4">4</button>
@@ -38,8 +38,8 @@
             <div class="row">
                 <button class="numButtons" value="0">0</button>
                 <button class="numButtons symbol" value=".">.</button>
-                <button class="numButtons symbol equalTo" value="=">=</button>
                 <button class="numButtons symbol" value="+">+</button>
+                <button class="numButtons symbol equalTo">=</button>
             </div>
         </div>
     </div>
