--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
                 <button class="numButtons del">DEL</button>
             </div>
             <div class="row">
-                <button class="numButtons" value="7">7</button>
-                <button class="numButtons" value="8" >8</button>
-                <button class="numButtons" value="9">9</button>
+                <button class="numButtons numbers" value="7">7</button>
+                <button class="numButtons numbers" value="8" >8</button>
+                <button class="numButtons numbers" value="9">9</button>
                 <button class="numButtons symbol" value="/">/</button>
             </div>
             <div class="row">
-                <button class="numButtons" value="4">4</button>
-                <button class="numButtons" value="5">5</button>
-                <button class="numButtons" value="6">6</button>
+                <button class="numButtons numbers" value="4">4</button>
+                <button class="numButtons numbers" value="5">5</button>
+                <button class="numButtons numbers" value="6">6</button>
                 <button class="numButtons symbol" value="*">x</button>
             </div>
             <div class="row">
-                <button class="numButtons" value="1">1</button>
-                <button class="numButtons" value="2">2</button>
-                <button class="numButtons" value="3">3</button>
+                <button class="numButtons numbers" value="1">1</button>
+                <button class="numButtons numbers" value="2">2</button>
+                <button class="numButtons numbers" value="3">3</button>
                 <button class="numButtons symbol" value="-">-</button>
             </div>
             <div class="row">
-                <button class="numButtons" value="0">0</button>
+                <button class="numButtons numbers" value="0">0</button>
                 <button class="numButtons symbol" value=".">.</button>
                 <button class="numButtons symbol" value="+">+</button>
-                <button class="numButtons symbol equalTo">=</button>
+                <button class="numButtons symbol equalTo" value="=">=</button>
             </div>
         </div>
     </div>
