--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <button class="numButtons numbers" value="0">0</button>
                 <button class="numButtons symbol" value=".">.</button>
                 <button class="numButtons symbol" value="+">+</button>
-                <button class="numButtons symbol equalTo" value="=">=</button>
+                <button class="numButtons  equalTo" value="=">=</button>
             </div>
         </div>
     </div>
