update: update script.js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="row">
                 <button class="numButtons numbers" value="0">0</button>
-                <button class="numButtons symbol" value=".">.</button>
+                <button class="numButtons numbers" value=".">.</button>
                 <button class="numButtons symbol" value="+">+</button>
                 <button class="numButtons  equalTo" value="=">=</button>
             </div>
