update: final update done , project finished

--- a/index.html
+++ b/index.html
@@ -8,43 +8,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="dark-mode">
     <div class="container">
+
         <div class="calculator">
             <p class="casio">CASIO</p>
             <p class="display"></p>
             <div class="row">
                 <button class="numButtons ac">AC</button>
-                <button class="numButtons del">DEL</button>
+                <button class="numButtons del">⌫ </button>
             </div>
             <div class="row">
                 <button class="numButtons numbers" value="7">7</button>
-                <button class="numButtons numbers" value="8" >8</button>
+                <button class="numButtons numbers" value="8">8</button>
                 <button class="numButtons numbers" value="9">9</button>
-                <button class="numButtons symbol" value="/">/</button>
+                <button class="numButtons operator operator symbol" value="/">÷</button>
             </div>
             <div class="row">
                 <button class="numButtons numbers" value="4">4</button>
                 <button class="numButtons numbers" value="5">5</button>
                 <button class="numButtons numbers" value="6">6</button>
-                <button class="numButtons symbol" value="*">x</button>
+                <button class="numButtons operator  symbol" value="*">x</button>
             </div>
             <div class="row">
                 <button class="numButtons numbers" value="1">1</button>
                 <button class="numButtons numbers" value="2">2</button>
                 <button class="numButtons numbers" value="3">3</button>
-                <button class="numButtons symbol" value="-">-</button>
+                <button class="numButtons operator  symbol" value="-">-</button>
             </div>
             <div class="row">
                 <button class="numButtons numbers" value="0">0</button>
-                <button class="numButtons numbers" value=".">.</button>
-                <button class="numButtons symbol" value="+">+</button>
+                <button class="numButtons operator  numbers" value=".">.</button>
+                <button class="numButtons operator  symbol" value="+">+</button>
                 <button class="numButtons  equalTo" value="=">=</button>
             </div>
         </div>
-    </div>
+        <p class="footer">Made by Shubham 💻</p>
 
-    <script src="script.js"></script>
+    </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
